--- a/recipes/halwa.html
+++ b/recipes/halwa.html
@@ -7,35 +7,39 @@
 </head>
 <body>
     <h1>Halwa</h1> <br>
-    <img src="./images/Lasagna.png" height="500" width="500" alt=" Oops! no lasagna for you"> <br>
+    <img src="./images/Halwa.png" height="500" width="500" alt=" Oops!"> <br>
     <h3>Description</h3> 
-    <p>This is my mom's special homemade <strong>lasagna</strong> recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd <em>cottage cheese and Parmesan</em>. I have found none better anywhere. Serve with a leafy green salad and crusty <i>garlic bread</i>.</p>
-    <p>Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe <b>today!</b></p>
+    <p>Carrot halwa, or <strong>gajar ka halwa</strong>, is a traditional Indian dessert that's deliciously rich and creamy. This recipe uses whole milk, not condensed milk. Serve warm with vanilla ice cream for a real treat!
+
+    </p>
+    <!-- <p>Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe <b>today!</b></p> -->
     <h4>Ingredients</h4>
         <ul>
-            <li>Meat</li>
-            <li>Onion</li>
+            <li>2 tablespoons ghee or oil</li>
+            <li>2 pounds carrots, grated</li>
             <li>Canned Tomatoes</li>
-            <li>Fresh Herbs</li>
-            <li> Sugar</li>
-            <li>Spices and Seasoning</li>
-            <li>Noodles</li>
-            <li>Cheese</li>
-            <li>Eggs</li>
+            <li>1 ½ quarts whole milk</li>
+            <li> ½ cup raisins or sultanas</li>
+            <li>2 cups white sugar
+            </li>
+            <li>1 ½ teaspoons ground cardamom</li>
+            <li>1 pinch saffron threads</li>
+            <li>8 tablespoons chopped pistachio nuts</li>
         </ul>
         <h4>Steps:</h4>
 
         <ol type="i">
-            <li><b>Cook the meat :</b> Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
-            <li> <b> Cook the Noodles : </b>Boil the lasagna noodles in lightly salted water until they're al dente.</li>
-            <li> <b>Make the Cheese layer: </b>Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
-            <li><b>Assemble the lasagna: </b>Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
-            <li><b>Bake the lasagna: </b>Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
+            <li><b>Step 1 :</b> Heat ghee in a large saucepan over medium heat and add carrots. Cook and stir briefly, about 3 minutes. Pour in milk and increase heat; bring to a boil and cook, stirring constantly, for 5 minutes. Reduce heat to low and simmer gently, uncovered, and stirring occasionally until moisture evaporates, about 1 hour.</li>
+            <li> <b> Step 2 : </b>Bring carrot mixture back to a boil; add sugar, raisins, cardamom, and saffron. Cook and stir until mixture has thickened, about 10 minutes.
+
+            </li>
+            <li><b>Step 3 : </b>Ladle carrot halwa into 8 individual serving dishes. Top each serving with 1 tablespoon pistachios. Serve warm or chill before serving.</li>
+            <!-- <li><b>Bake the lasagna: </b>Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li> -->
                 
         </ol>
 
 
         <br>
-        <b>For more detailed recipe</b> <a href="https://www.allrecipes.com/recipe/19344/homemade-lasagna/" target="_blank"><button>Click Here!!</button> </a> 
+        <b>For more detailed recipe</b> <a href="https://www.allrecipes.com/recipe/282238/gajar-ka-halwa-carrot-halwa/" target="_blank"><button>Click Here!!</button> </a> 
 </body>
 </html>
