--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li> <a href="./recipes/lasagna.html" target="_blank" rel="NO">Link to Lasagna</a> </li>
         <li> <a href="./recipes/halwa.html" target="_blank " rel="NO"> Link to Gajar Ka Halwa</a></li>
+        <li> <a href="./recipes/guac.html">Link to Guac</a></li>
     </ul>
     
     
