--- a/recipes/guac.html
+++ b/recipes/guac.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Guac</title>
 </head>
 <body>
-    <h1>Halwa</h1> <br>
+    <h1 class="guac">Guac</h1> <br>
     <img src="./images/Guac.png" height="500" width="500" alt=" Oops!"> <br>
     <h3>Description</h3> 
     <p>This easy <strong>guacamole</strong> recipe is quick and simple to make. Great with <em>tortilla chips</em> or as a topping for <em>Mexican foods!</em>
@@ -26,20 +27,20 @@
 
         <ol type="i">
             <li><b>Step 1 :</b> Gather all ingredients. <br>
-                <img src="./images/ingredients.png" height="200" width="200">
+                <img class="image" src="./images/ingredients.png" height="200" width="200">
 
             </li>
             <li> <b> Step 2 : </b>Mash avocado in a medium serving bowl. <br>
-                <img src="./images/mashedGuac.png " height="200" width="200">
+                <img class="image" src="./images/mashedGuac.png " height="200" width="200">
             </li>
             <li><b>Step 3 : </b>Stir in onion, tomato, and garlic.<br>
-                <img src="./images/addonion,tomato,ginger.png" height="200" width="200">
+                <img class="image" src="./images/addonion,tomato,ginger.png" height="200" width="200">
             </li>
             <li><b>Step 4: </b> Add lemon juice,salt and pepper <br>
-                <img src="./images/addtherest.png" height="200" width="200">
+                <img class="image" src="./images/addtherest.png" height="200" width="200">
             </li>
             <li><b>Step 5 : </b>Cover and chill guacamole for 30 minutes to allow flavors to blend.<br>
-                <img src="./images/Guac.png" height="200" width="200">
+                <img class="image" src="./images/Guac.png" height="200" width="200">
              </li>
             <!-- <li><b>Bake the lasagna: </b>Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li> -->
                 
@@ -47,6 +48,6 @@
 
 
         <br>
-        <b>For more detailed recipe</b> <a href="https://www.allrecipes.com/recipe/14064/easy-guacamole/" target="_blank"><button>Click Here!!</button> </a> 
+        <b>For more detailed recipe</b> <a href="https://www.allrecipes.com/recipe/14064/easy-guacamole/" target="_blank"><button class="button">Click Here!!</button> </a> 
 </body>
 </html>
