--- a/recipes/halwa.html
+++ b/recipes/halwa.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Halwa</title>
 </head>
 <body>
-    <h1>Halwa</h1> <br>
-    <img src="./images/Halwa.png" height="500" width="500" alt=" Oops!"> <br>
+    <h1 class="halwa">Halwa</h1> <br>
+    <img src="./images/Halwa.png"  height="500" width="500" alt=" Oops!"> <br>
     <h3>Description</h3> 
     <p>Carrot halwa, or <strong>gajar ka halwa</strong>, is a traditional Indian dessert that's deliciously rich and creamy. This recipe uses whole milk, not condensed milk. Serve warm with vanilla ice cream for a real treat!
 
@@ -40,6 +41,6 @@
 
 
         <br>
-        <b>For more detailed recipe</b> <a href="https://www.allrecipes.com/recipe/282238/gajar-ka-halwa-carrot-halwa/" target="_blank"><button>Click Here!!</button> </a> 
+        <b>For more detailed recipe</b> <a href="https://www.allrecipes.com/recipe/282238/gajar-ka-halwa-carrot-halwa/" target="_blank"><button class="button">Click Here!!</button> </a> 
 </body>
 </html>
