--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna</h1> <br>
-    <img src="./images/Lasagna.png" height="500" width="500" alt=" Oops! no lasagna for you"> <br>
+    <h1 class="Lasagna">Lasagna</h1> <br>
+    <img  src="./images/Lasagna.png" height="500" width="500" alt=" Oops! no lasagna for you"> <br>
     <h3>Description</h3> 
-    <p>This is my mom's special homemade <strong>lasagna</strong> recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd <em>cottage cheese and Parmesan</em>. I have found none better anywhere. Serve with a leafy green salad and crusty <i>garlic bread</i>.</p>
-    <p>Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe <b>today!</b></p>
-    <h4>Ingredients</h4>
+    <p class="intro lasagna">This is my mom's special homemade <strong>lasagna</strong> recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd <em>cottage cheese and Parmesan</em>. I have found none better anywhere. Serve with a leafy green salad and crusty <i>garlic bread</i>.</p>
+    <p class="intro lasagna">Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe <b>today!</b></p>
+    <h4 class="ingredients">Ingredients</h4>
         <ul>
             <li>Meat</li>
             <li>Onion</li>
@@ -23,6 +24,7 @@
             <li>Cheese</li>
             <li>Eggs</li>
         </ul>
+        <div class="steps lasagna">
         <h4>Steps:</h4>
 
         <ol type="i">
@@ -34,8 +36,8 @@
                 
         </ol>
 
-
+        </div>
         <br>
-        <b>For more detailed recipe</b> <a href="https://www.allrecipes.com/recipe/19344/homemade-lasagna/" target="_blank"><button>Click Here!!</button> </a> 
+        <b>For more detailed recipe</b> <a href="https://www.allrecipes.com/recipe/19344/homemade-lasagna/" target="_blank"><button class="button">Click Here!!</button> </a> 
 </body>
 </html>
