--- a/recipes/guac.html
+++ b/recipes/guac.html
@@ -30,7 +30,7 @@
                 <img class="image" src="./images/ingredients.png" height="200" width="200">
 
             </li>
-            <li> <b> Step 2 : </b>Mash avocado in a medium serving bowl. <br>
+            <li> <b> Step 2 : </b>Mash avocado in a medium serving bowl. 
                 <img class="image" src="./images/mashedGuac.png " height="200" width="200">
             </li>
             <li><b>Step 3 : </b>Stir in onion, tomato, and garlic.<br>
